primary text colour parser only, plus optional prefix now

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,10 +1,5 @@
 prefix: "<gray>[<b><gradient:#00AA00:#FFAA00>WorldMC</gradient></b>] "
-
-colors:
-  primary: "<green>"
-  secondary: "<blue>"
-  accent: "<light_purple>"
-  neutral: "<gray>"
+text-color: "<green>"
 
 title-durations:
   long:
